# PasswordStore

./: .appimage-builder.yml  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Containerfile  README.md  SECURITY.md  appimage-builder.yml  build.rs  build.sh  cargo-sources.yml  io.github.noobping.PasswordStore.json  io.github.noobping.keycord.json  io.github.noobping.keycord.yml  meson.build  meson_options.txt  security.txt
.github/workflows/: linux.yml  rust.yml  sources.yml  win.yml
AppDir/: .DirIcon  AppRun  io.github.noobping.PasswordStore.desktop
cmake/: CargoBuild.cmake
data/: gschema.xml  io.github.noobping.PasswordStore.SearchProvider.desktop.in  io.github.noobping.PasswordStore.SearchProvider.ini.in  io.github.noobping.PasswordStore.SearchProvider.service.in  io.github.noobping.PasswordStore.gschema.xml  io.github.noobping.PasswordStore.metainfo.xml.in  keycord.wxs  license.rtf  meson.build  metainfo.xml  resources.xml  shortcuts-flatpak.ui  shortcuts-standard.ui  shortcuts.ui  window.ui
data/icons/: meson.build
data/windows/share/icons/hicolor/: index.theme
docs/: README.md  README.nl.md  getting-started.md  getting-started.nl.md  permissions-and-backends.md  permissions-and-backends.nl.md  search.md  search.nl.md  story-of-secrets.md  story-of-secrets.nl.md  teams-and-organizations.md  teams-and-organizations.nl.md  use-cases.md  use-cases.nl.md  workflows.md  workflows.nl.md
passcore/: Cargo.toml  meson.build
passcore/src/: dir.rs  entry.rs  extension.rs  lib.rs  pass.rs  store.rs
passwordstore/: Cargo.toml  meson.build
passwordstore/src/: application.rs  block_on.rs  config.rs  data.rs  extension.rs  main.rs  meson.build  method.rs  pages.rs  passwordstore.gresource.xml  run.rs  window.rs  window.ui
passwordstore/src/gtk/: help-overlay.ui
po/: LINGUAS  Makevars  POTFILES.in  meson.build  nl.po
scripts/: create-demo-stores.sh  meson-build-profile.sh  meson-cargo-build.sh  update-po.sh
src/: app.rs  backend.rs  background.rs  clipboard.rs  clipboard_desktop.rs  clipboard_flatpak.rs  config.rs  fido2_recipient.rs  i18n.rs  item.rs  logging.rs  main.rs  methods.rs  new_password_popover.rs  pass_file.rs  password_list.rs  password_otp.rs  password_page.rs  password_page_desktop.rs  password_page_flatpak.rs  preferences.rs  preferences_desktop.rs  private_key_dialog.rs  ripasso_keys.rs  ripasso_unlock.rs  search_provider.rs  settings.rs  setup.rs  store_management.rs  store_recipients_page.rs  stores.rs  window.rs  window_controls.rs  window_controls_desktop.rs  window_controls_flatpak.rs  window_desktop.rs  window_git.rs  window_logs.rs  window_messages.rs  window_navigation.rs  (+3 more)
src/backend/: command.rs  errors.rs  host.rs  host_errors.rs  integrated.rs  integrated_flatpak.rs  mod.rs  path_validation.rs  test_support.rs
src/backend/host/: command.rs  legacy.rs  mod.rs
src/backend/integrated/: entries.rs  flatpak.rs  git.rs  keys.rs  mod.rs  non_linux.rs  standard.rs  store.rs  tests.rs
src/backend/integrated/flatpak/: crypto.rs  entries.rs  git.rs  mod.rs  paths.rs  recipients.rs  store.rs  tests.rs
src/backend/integrated/keys/: cache.rs  cert.rs  errors.rs  fido2.rs  fido2_disabled.rs  hardware.rs  hardware_crypto.rs  mod.rs  store.rs
src/backend/integrated/keys/fido2/: common.rs  disabled.rs  key.rs  mod.rs  store.rs  transport_test.rs
src/backend/integrated/keys/hardware/: crypto.rs  linux.rs  mod.rs  unsupported.rs
src/backend/integrated/shared/: crypto.rs  paths.rs  recipients.rs
src/backend/integrated/standard/: git.rs  store.rs
src/clipboard/: flatpak.rs  mod.rs  standard.rs
src/logging/: command.rs  disabled.rs  mod.rs  non_linux.rs  store.rs
src/logging/command/: control.rs  mod.rs  run.rs  streams.rs
src/password/: entry_files.rs  file.rs  generation.rs  list.rs  mod.rs  model.rs  new_item.rs  opened.rs  otp.rs  strength.rs  undo.rs
src/password/file/: compose.rs  mod.rs  parse.rs  row_ui.rs  types.rs  url.rs
src/password/list/: mod.rs  placeholder.rs  row.rs  search.rs
src/password/list/search/: index.rs  query.rs  tests.rs
src/password/otp/: countdown.rs  mod.rs  url.rs
src/password/page/: editor.rs  flatpak.rs  linux.rs  mod.rs  non_linux.rs  standard.rs  state.rs
src/password_page/: mod.rs
src/preferences/: command_backend.rs  flatpak.rs  linux.rs  mod.rs  non_linux.rs  restricted.rs  standard.rs  storage.rs
src/private_key/: dialog.rs  git.rs  mod.rs  sync.rs  unlock.rs
src/setup/: tests.rs
src/store/: git_page.rs  labels.rs  management.rs  mod.rs  recipients.rs  support.rs
src/store/management/: clone.rs  dialogs.rs  import.rs
src/store/recipients_page/: export.rs  flatpak.rs  generate.rs  guide.rs  import.rs  list.rs  mod.rs  mode.rs  progress.rs  save.rs  standard.rs  sync.rs
src/store/recipients_page/flatpak/: generate.rs  import.rs  list.rs  mod.rs
src/store_recipients_page/: flatpak.rs  mod.rs
src/support/: actions.rs  background.rs  file_picker.rs  git.rs  hardening.rs  hardening_disabled.rs  mod.rs  object_data.rs  pass_import.rs  runtime.rs  secure_fs.rs  secure_fs_disabled.rs  startup.rs  theme.rs  toml_safety.rs  ui.rs  uri.rs  validation.rs
src/support/git/: audit.rs  audit_disabled.rs  command.rs  mod.rs  remotes.rs  repository.rs  status.rs  sync.rs  tests.rs  types.rs
src/updater/: common.rs  disabled.rs  linux.rs  logic.rs  mod.rs  windows.rs
src/window/: build.rs  controls.rs  controls_standard.rs  docs.rs  docs_disabled.rs  flatpak.rs  git.rs  host_access.rs  logs.rs  messages.rs  mod.rs  navigation.rs  navigation_standard.rs  non_linux.rs  preferences.rs  preferences_search.rs  preferences_standard.rs  session.rs  standard.rs  tools.rs
src/window/controls/: flatpak.rs  mod.rs  non_linux.rs  standard.rs
src/window/git/: disabled.rs  enabled.rs  mod.rs  non_linux.rs  operations.rs
src/window/navigation/: chrome.rs  mod.rs  pages.rs  restore.rs  standard.rs  state.rs
src/window/preferences/: flatpak.rs  mod.rs  non_linux.rs  setup.rs  standard.rs
src/window/tools/: audit.rs  field_values.rs  menu.rs  tests.rs  unlock.rs  weak_passwords.rs
(+6 files in other folders)
