[package]
name = "keycord"
description = "Browse and edit password stores"
authors = ["noobping <hello@noobping.dev>"]
version = "0.9.9"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/noobping/keycord"
repository = "https://github.com/noobping/keycord"

[features]
audit = []
default = ["audit", "docs", "fidokey", "fidopin", "legacy-compat", "logging", "smartcard"]
docs = ["dep:pulldown-cmark"]
fidokey = ["dep:base64", "dep:fido2-rs", "dep:hmac", "dep:openssl"]
fidopin = ["dep:libfido2-sys"]
fidostore = ["dep:base64", "dep:fido2-rs", "dep:hmac", "dep:openssl"]
flatpak = []
hardwarekey = ["smartcard"]
legacy-compat = []
logging = []
setup = ["dep:semver", "dep:reqwest"]
smartcard = ["dep:card-backend-pcsc", "dep:openpgp-card"]

[dependencies]
thiserror = "2.0"
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_5"] }
walkdir = "2.5.0"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
ripasso = "0.8.0"
sequoia-openpgp = "2.2.0"
dirs-next = "2.0.0"
shellexpand = "3.1.2"
totp-rs = "5.7.1"
rand = "0.10.0"
regex = "1.12.3"
zeroize = { version = "1.8.2", features = ["alloc"] }
secrecy = "0.10.3"
pulldown-cmark = { version = "0.13.3", optional = true }
fido2-rs = { version = "0.4.0", optional = true }
base64 = { version = "0.22.1", optional = true }
hmac = { version = "0.13.0", optional = true }
openssl = { version = "0.10.76", optional = true }
sha2 = "0.11.0"
url = "2.5.8"

[target.'cfg(target_os = "linux")'.dependencies]
anyhow = "1.0"
libc = "0.2"
shlex = "1.3.0"
card-backend-pcsc = { version = "0.5.1", optional = true }
libfido2-sys = { version = "0.5.0", optional = true }
openpgp-card = { version = "0.6.1", optional = true }
semver = { version = "1.0.27", optional = true }
reqwest = { version = "0.13.2", optional = true, default-features = false, features = ["blocking", "json", "rustls"] }

[build-dependencies]
glib-build-tools = "0.22.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.31"

[target.'cfg(target_os = "windows")'.dependencies]
semver = "1.0.27"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
winsafe = { version = "0.0.27", features = ["shell"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
