option(
  'cargo_variant',
  type: 'combo',
  choices: ['developer', 'release', 'translation'],
  value: 'developer',
  description: 'Cargo-backed Meson wrapper profile. The translation profile intentionally reuses cargo build --release.',
)

option(
  'cargo_features',
  type: 'string',
  value: '',
  description: 'Space- or comma-separated Cargo features to pass through the Meson wrapper.',
)

option(
  'fidostore',
  type: 'boolean',
  value: false,
  description: 'Enable FIDO-backed password store support.',
)

option(
  'docs',
  type: 'boolean',
  value: false,
  description: 'Enable the built-in documentation browser.',
)

option(
  'fidokey',
  type: 'boolean',
  value: false,
  description: 'Enable FIDO-protected OpenPGP private key support.',
)
