option(
  'cargo_variant',
  type: 'combo',
  choices: ['developer', 'release', 'translation'],
  value: 'developer',
  description: 'Cargo-backed Meson wrapper profile. The translation profile intentionally reuses cargo build --release.',
)

option(
  'cargo_features',
  type: 'string',
  value: '',
  description: 'Space- or comma-separated Cargo features to pass through the Meson wrapper.',
)

option(
  'fidostore',
  type: 'boolean',
  value: false,
  description: 'Enable FIDO2-backed password store support.',
)

option(
  'docs',
  type: 'boolean',
  value: true,
  description: 'Enable the built-in documentation browser.',
)

option(
  'logging',
  type: 'boolean',
  value: true,
  description: 'Enable the in-app log viewer and command stream capture.',
)

option(
  'fidokey',
  type: 'boolean',
  value: false,
  description: 'Enable FIDO2-protected OpenPGP private key support.',
)
