option(
  'cargo_variant',
  type: 'combo',
  choices: ['developer', 'release', 'translation'],
  value: 'developer',
  description: 'Cargo-backed Meson wrapper profile. The translation profile intentionally reuses cargo build --release.',
)

option(
  'cargo_features',
  type: 'string',
  value: '',
  description: 'Space- or comma-separated Cargo features to pass through the Meson wrapper.',
)

option(
  'fidostore',
  type: 'boolean',
  value: false,
  description: 'Enable FIDO2-backed password store support.',
)

option(
  'smartcard',
  type: 'boolean',
  value: false,
  description: 'Enable direct OpenPGP smartcard and security-token recipient support.',
)

option(
  'hardwarekey',
  type: 'boolean',
  value: false,
  description: 'Enable managed OpenPGP hardware-key add/import/setup flows.',
)

option(
  'docs',
  type: 'boolean',
  value: true,
  description: 'Enable the built-in documentation browser.',
)

option(
  'logging',
  type: 'boolean',
  value: true,
  description: 'Enable the in-app log viewer and command stream capture.',
)

option(
  'audit',
  type: 'boolean',
  value: false,
  description: 'Enable the optional Git audit tool.',
)

option(
  'legacy_compat',
  type: 'boolean',
  value: false,
  description: 'Enable startup migration and older compatibility shims for managed-key storage.',
)

option(
  'fidokey',
  type: 'boolean',
  value: false,
  description: 'Enable FIDO2-protected OpenPGP private key support.',
)

option(
  'fidopin',
  type: 'boolean',
  value: false,
  description: 'Enable Linux-only first-time FIDO2 security-key PIN setup support.',
)
