[package]
name = "passcore"
version = "0.1.0"
edition = "2024"

[lib]
name = "passcore"
path = "src/lib.rs"
crate-type  = ["rlib", "staticlib"]

[dependencies]
anyhow = "1.0.98"
derivative = "2.2.0"
directories = "6.0.0"
git2 = "0.20.1"
glob = "0.3.2"
gpgme = { version = "0.11.0", features = ["v1_18"] }
log = "0.4.27"
secrecy = "0.10.3"
walkdir = "2.5.0"
zbus = "5.5.0"
