[package]
name = "passwordstore"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
log = "0.4.27"
passcore = { path = "../passcore" }
search-provider = { version = "0.11.0", features = ["gdk"] }

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
